nah b+ számlázási rend

--- a/src/app/projekt/projekt-egy/projekt-egy.component.html
+++ b/src/app/projekt/projekt-egy/projekt-egy.component.html
@@ -116,7 +116,7 @@
     <div [@rowanimation]><app-projektkapcsolat-container></app-projektkapcsolat-container></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 10">
-    <div [@rowanimation]><app-szamlazasirend-container></app-szamlazasirend-container></div>
+    <div [@rowanimation]><app-szamlazasirend-list></app-szamlazasirend-list></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 11">
     <div [@rowanimation]><app-projekt-teendo-container></app-projekt-teendo-container></div>
