--- a/src/app/szamlazasirend/szamlazasirend-egy/szamlazasirend-egy.component.html
+++ b/src/app/szamlazasirend/szamlazasirend-egy/szamlazasirend-egy.component.html
@@ -1,47 +1,42 @@
 <div class="alapkeret">
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doReszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
 
       <button [disabled]="eppFrissit"
-              (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              (click)="doTorles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
       <button [disabled]="eppFrissit"
-              (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              (click)="doModositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
     </nav>
   </div>
 
-<!--  export enum SzamlazasirendEgyMode {
-  Reszletek = 1,
-  Torles = 2,
-  Modositas = 3
-  }-->
-  <ng-container *ngIf="szamlazasirendservice.EgyMode === 1">
+  <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
       <app-reszletek [cim]="szamlazasirendservice.cim"
                      [item]="szamlazasirendservice.Dto[szamlazasirendservice.DtoSelectedIndex]"
-                     [colsets]="szamlazasirendservice.ReszletekSettings"
-                     [(selectedindex)]="ri">
+                     [colsets]="szamlazasirendservice.ReszletekSettings">
       </app-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="szamlazasirendservice.EgyMode === 2">
+  <ng-container *ngIf="egymode === 2">
     <div [@rowanimation]>
-      <app-tetel-torles [cim]="afakulcsservice.cim"
+      <app-tetel-torles [cim]="szamlazasirendservice.cim"
                         [eppFrissit]="eppFrissit"
-                        (OkClick)="TorlesOk()"
-                        (CancelClick)="TorlesCancel()">
+                        (eventTorles)="onTorles($event)">
       </app-tetel-torles>
     </div>
   </ng-container>
-  <ng-container *ngIf="szamlazasirendservice.EgyMode === 3">
+  <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
-      <app-szamlazasirend-szerkesztes></app-szamlazasirend-szerkesztes>
+      <app-szamlazasirend-szerkesztes [uj]="false"
+                                      (eventSzerkeszteskesz)="onModositaskesz()">
+      </app-szamlazasirend-szerkesztes>
     </div>
   </ng-container>
 </div>
