--- a/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
+++ b/src/app/szamlazasirend/szamlazasirend-szerkesztes/szamlazasirend-szerkesztes.component.html
@@ -1,6 +1,6 @@
 <div class="alapkeret">
-  <h5 *ngIf="szamlazasirendservice.uj">Új {{szamlazasirendservice.cim | lowercase}}</h5>
-  <h5 *ngIf="!szamlazasirendservice.uj">{{szamlazasirendservice.cim}} módosítása</h5>
+  <h5 *ngIf="uj">Új {{szamlazasirendservice.cim | lowercase}}</h5>
+  <h5 *ngIf="!uj">{{szamlazasirendservice.cim}} módosítása</h5>
 
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
@@ -38,7 +38,7 @@
 
     <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 
