--- a/src/app/projekt/projekt-egy/projekt-egy.component.html
+++ b/src/app/projekt/projekt-egy/projekt-egy.component.html
@@ -119,7 +119,7 @@
     <div [@rowanimation]><app-szamlazasirend-list></app-szamlazasirend-list></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 11">
-    <div [@rowanimation]><app-projekt-teendo-container></app-projekt-teendo-container></div>
+    <div [@rowanimation]><app-projekt-teendo-list></app-projekt-teendo-list></div>
   </ng-container>
   <ng-container *ngIf="projektservice.EgyMode === 12">
     <div [@rowanimation]>
