--- a/src/app/projektteendo/projekt-teendo-egy/projekt-teendo-egy.component.html
+++ b/src/app/projektteendo/projekt-teendo-egy/projekt-teendo-egy.component.html
@@ -1,57 +1,52 @@
 <div class="alapkeret">
   <div>
     <nav>
-      <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doReszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
 
       <button [disabled]="eppFrissit"
-              (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              (click)="doTorles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
       <button [disabled]="eppFrissit"
-              (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              (click)="doModositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit" (click)="elvegezve()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doElvegezve()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Elvégezve
       </button>
     </nav>
   </div>
 
-<!--  export enum ProjektteendoEgyMode {
-  Reszletek = 1,
-  Torles = 2,
-  Modositas = 3,
-  Elvegezve = 4
-  }-->
-  <ng-container *ngIf="projektteendoservice.EgyMode === 1">
+  <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
       <app-reszletek [cim]="projektteendoservice.cim"
                      [item]="projektteendoservice.Dto[projektteendoservice.DtoSelectedIndex]"
-                     [colsets]="projektteendoservice.ReszletekSettings"
-                     [(selectedindex)]="ri">
+                     [colsets]="projektteendoservice.ReszletekSettings">
       </app-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="projektteendoservice.EgyMode === 2">
+  <ng-container *ngIf="egymode === 2">
     <div [@rowanimation]>
       <app-tetel-torles [cim]="projektteendoservice.cim"
                         [eppFrissit]="eppFrissit"
-                        (OkClick)="TorlesOk()"
-                        (CancelClick)="TorlesCancel()">
+                        (eventTorles)="onTorles($event)">
       </app-tetel-torles>
     </div>
   </ng-container>
-  <ng-container *ngIf="projektteendoservice.EgyMode === 3">
+  <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
-      <app-projekt-teendo-szerkesztes></app-projekt-teendo-szerkesztes>
+      <app-projekt-teendo-szerkesztes [uj]="false"
+                                      (eventSzerkeszteskesz)="onModositaskesz()">
+      </app-projekt-teendo-szerkesztes>
     </div>
   </ng-container>
-  <ng-container *ngIf="projektteendoservice.EgyMode === 4">
+  <ng-container *ngIf="egymode === 18">
     <div [@rowanimation]>
-      <app-projekt-teendo-elvegezve></app-projekt-teendo-elvegezve>
+      <app-projekt-teendo-elvegezve (eventSzerkeszteskesz)="onModositaskesz()">
+      </app-projekt-teendo-elvegezve>
     </div>
   </ng-container>
 </div>
