--- a/src/app/projekt/projekt-list/projekt-list.component.html
+++ b/src/app/projekt/projekt-list/projekt-list.component.html
@@ -14,8 +14,13 @@
   <app-projekt-tabla #tabla
                      [Dto]="projektservice.Dto"
                      (forid)="setClickedRow($event)"
+                     [ujTemplate]="griduj"
                      [egyTemplate]="gridegy">
   </app-projekt-tabla>
+  <ng-template #griduj>
+    <app-projekt-szerkesztes [uj]="true"
+                             (eventSzerkeszteskesz)="onUjkesz()"></app-projekt-szerkesztes>
+  </ng-template>
   <ng-template #gridegy>
     <app-projekt-egy (torlesutan)="torlesutan()"></app-projekt-egy>
   </ng-template>
