--- a/src/app/projekt/projekttabla/projekt-tabla.component.html
+++ b/src/app/projekt/projekttabla/projekt-tabla.component.html
@@ -24,59 +24,65 @@
   </tr>
   </thead>
   <tbody>
-  <ng-container *ngFor="let item of Dto; let i = index">
-    <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
-      <td *ngIf="enIdclick" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="clickforid(i)">{{item.Projektkod}}</td>
-      <td *ngIf="!enIdclick">{{item.Projektkod}}</td>
-      <td>{{item.Statusz}}</td>
-      <td>
-        <div style="width: 200px">{{item.Ugyfelnev}}</div>
-        <div style="width: 250px">{{item.Ugyfelcim}}</div>
-      </td>
-      <td>
-        <div>{{item.Ugyfelemail}}</div>
-        <div>{{item.Ugyfeltelefonszam}}</div>
-      </td>
-      <td>
-        <div style="width: 300px">{{item.Telepitesicim}}</div>
-        <div style="width: 150px">{{item.Projektjellege}}</div>
-      </td>
-      <td>
-        <div style="width:120px" [style.background-color]="MuszakiallapotColor(item.Muszakiallapot)">{{item.Muszakiallapot}}</div>
-      </td>
-      <td>
-        <div style="width: 250px" [style.background-color]="InverterNapelemColor(item.Inverterallapot)">
-          <div>{{item.Inverter}}</div>
-          <div>{{item.Inverterallapot}}</div>
-        </div>
-      </td>
-      <td>
-        <div style="width: 250px" [style.background-color]="InverterNapelemColor(item.Napelemallapot)">
-          <div>{{item.Napelem}}</div>
-          <div>{{item.Napelemallapot}}</div>
-        </div>
-      </td>
-      <td>
-        <div style="text-align: right">
-          <div>{{item.Ackva | number: '1.2-2'}}</div>
-          <div>{{item.Dckw | number: '1.2-2'}}</div>
-        </div>
-      </td>
-      <td style="text-align: right">{{item.Vallalasiarnetto | number: '1.2-2'}}</td>
-      <td>{{item.Penznem}}</td>
-      <td>{{item.Munkalapszam}}</td>
-      <td>{{item.Keletkezett | datehun}}</td>
-      <td>{{item.Megrendelve | datehun}}</td>
-      <td>{{item.Kivitelezesihatarido | datehun}}</td>
-    </tr>
-    <tr *ngIf="item.Megjegyzes !== null && item.Megjegyzes !== '' && megjegyzesIs" (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
-      <td colspan="100">{{item.Megjegyzes}}</td>
-    </tr>
-    <tr *ngIf="i === clickedidindex && egyTemplate !== undefined" [class.active]="i === clickedidindex">
+    <tr *ngIf="ujtetel && ujTemplate !== undefined" class="active">
       <td colspan="100">
-        <ng-template *ngTemplateOutlet="egyTemplate"></ng-template>
+        <ng-template *ngTemplateOutlet="ujTemplate"></ng-template>
       </td>
     </tr>
-  </ng-container>
+
+    <ng-container *ngFor="let item of Dto; let i = index">
+      <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
+        <td *ngIf="enIdclick" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="clickforid(i)">{{item.Projektkod}}</td>
+        <td *ngIf="!enIdclick">{{item.Projektkod}}</td>
+        <td>{{item.Statusz}}</td>
+        <td>
+          <div style="width: 200px">{{item.Ugyfelnev}}</div>
+          <div style="width: 250px">{{item.Ugyfelcim}}</div>
+        </td>
+        <td>
+          <div>{{item.Ugyfelemail}}</div>
+          <div>{{item.Ugyfeltelefonszam}}</div>
+        </td>
+        <td>
+          <div style="width: 300px">{{item.Telepitesicim}}</div>
+          <div style="width: 150px">{{item.Projektjellege}}</div>
+        </td>
+        <td>
+          <div style="width:120px" [style.background-color]="MuszakiallapotColor(item.Muszakiallapot)">{{item.Muszakiallapot}}</div>
+        </td>
+        <td>
+          <div style="width: 250px" [style.background-color]="InverterNapelemColor(item.Inverterallapot)">
+            <div>{{item.Inverter}}</div>
+            <div>{{item.Inverterallapot}}</div>
+          </div>
+        </td>
+        <td>
+          <div style="width: 250px" [style.background-color]="InverterNapelemColor(item.Napelemallapot)">
+            <div>{{item.Napelem}}</div>
+            <div>{{item.Napelemallapot}}</div>
+          </div>
+        </td>
+        <td>
+          <div style="text-align: right">
+            <div>{{item.Ackva | number: '1.2-2'}}</div>
+            <div>{{item.Dckw | number: '1.2-2'}}</div>
+          </div>
+        </td>
+        <td style="text-align: right">{{item.Vallalasiarnetto | number: '1.2-2'}}</td>
+        <td>{{item.Penznem}}</td>
+        <td>{{item.Munkalapszam}}</td>
+        <td>{{item.Keletkezett | datehun}}</td>
+        <td>{{item.Megrendelve | datehun}}</td>
+        <td>{{item.Kivitelezesihatarido | datehun}}</td>
+      </tr>
+      <tr *ngIf="item.Megjegyzes !== null && item.Megjegyzes !== '' && megjegyzesIs" (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
+        <td colspan="100">{{item.Megjegyzes}}</td>
+      </tr>
+      <tr *ngIf="i === clickedidindex && egyTemplate !== undefined" [class.active]="i === clickedidindex">
+        <td colspan="100">
+          <ng-template *ngTemplateOutlet="egyTemplate"></ng-template>
+        </td>
+      </tr>
+    </ng-container>
   </tbody>
 </table>
