--- a/src/app/projekt/projekt-egy/projekt-egy.component.html
+++ b/src/app/projekt/projekt-egy/projekt-egy.component.html
@@ -5,27 +5,27 @@
         <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || !mod" (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog" (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || !mod" (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog" (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || !mod" (click)="stsz()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog" (click)="stsz()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Stsz
       </button>
-      <button [disabled]="eppFrissit || !mod" (click)="muszakiallapot()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog" (click)="muszakiallapot()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Műszaki állapot
       </button>
-      <button [disabled]="eppFrissit || !mod" (click)="inverter()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog" (click)="inverter()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Inverter
       </button>
-      <button [disabled]="eppFrissit || !mod" (click)="napelem()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog" (click)="napelem()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Napelem
       </button>
-      <button [disabled]="eppFrissit || !mod" (click)="datumok()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || !jog" (click)="datumok()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Dátumok
       </button>
       <button [disabled]="eppFrissit" (click)="iratminta()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
@@ -43,22 +43,8 @@
     </nav>
   </div>
 
-<!--  export enum ProjektEgyMode {
-  Reszletek = 1,
-  Torles = 2,
-  Modositas = 3,
-  Statusz = 4,
-  Muszakiallapot = 5,
-  Inverter = 6,
-  Napelem = 7,
-  Iratminta = 8,
-  Bizonylatesirat = 9,
-  Szamlazasirend = 10,
-  Teendo = 11,
-  Datumok = 12
-  }-->
 
-  <ng-container *ngIf="projektservice.EgyMode === 1">
+  <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
       <app-reszletek [cim]="projektservice.cim"
                      [item]="projektservice.Dto[projektservice.DtoSelectedIndex]"
@@ -66,29 +52,32 @@
       </app-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="projektservice.EgyMode === 2">
+  <ng-container *ngIf="egymode === 2">
     <div [@rowanimation]>
       <app-tetel-torles [cim]="projektservice.cim"
                         [eppFrissit]="eppFrissit"
-                        (OkClick)="TorlesOk()"
-                        (CancelClick)="TorlesCancel()">
+                        (eventTorles)="onTorles($event)">
       </app-tetel-torles>
     </div>
   </ng-container>
-  <ng-container *ngIf="projektservice.EgyMode === 3">
+  <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
       <app-projekt-szerkesztes [uj]="false"
                                (eventSzerkeszteskesz)="onModositaskesz()">
       </app-projekt-szerkesztes>
     </div>
   </ng-container>
-  <ng-container *ngIf="projektservice.EgyMode === 4">
+
+
+
+  <ng-container *ngIf="egymode === 19">
     <div [@rowanimation]><app-projekt-statusz [eppFrissit]="eppFrissit"
                                               (OkClick)="SegedOk()"
                                               (CancelClick)="SegedCancel()">
     </app-projekt-statusz></div>
   </ng-container>
-  <ng-container *ngIf="projektservice.EgyMode === 5">
+
+  <ng-container *ngIf="egymode === 20">
     <div [@rowanimation]>
       <app-projekt-muszakiallapot [eppFrissit]="eppFrissit"
                                   (OkClick)="SegedOk()"
@@ -96,7 +85,8 @@
       </app-projekt-muszakiallapot>
     </div>
   </ng-container>
-  <ng-container *ngIf="projektservice.EgyMode === 6">
+
+  <ng-container *ngIf="egymode === 21">
     <div [@rowanimation]>
       <app-projekt-inverter [eppFrissit]="eppFrissit"
                             (OkClick)="SegedOk()"
@@ -104,7 +94,8 @@
       </app-projekt-inverter>
     </div>
   </ng-container>
-  <ng-container *ngIf="projektservice.EgyMode === 7">
+
+  <ng-container *ngIf="egymode === 22">
     <div [@rowanimation]>
       <app-projekt-napelem [eppFrissit]="eppFrissit"
                            (OkClick)="SegedOk()"
@@ -112,19 +103,24 @@
       </app-projekt-napelem>
     </div>
   </ng-container>
-  <ng-container *ngIf="projektservice.EgyMode === 8">
+
+  <ng-container *ngIf="egymode === 23">
     <div [@rowanimation]><app-projekt-iratminta></app-projekt-iratminta></div>
   </ng-container>
-  <ng-container *ngIf="projektservice.EgyMode === 9">
+
+  <ng-container *ngIf="egymode === 24">
     <div [@rowanimation]><app-projektkapcsolat-container></app-projektkapcsolat-container></div>
   </ng-container>
-  <ng-container *ngIf="projektservice.EgyMode === 10">
+
+  <ng-container *ngIf="egymode === 25">
     <div [@rowanimation]><app-szamlazasirend-list></app-szamlazasirend-list></div>
   </ng-container>
-  <ng-container *ngIf="projektservice.EgyMode === 11">
+
+  <ng-container *ngIf="egymode === 26">
     <div [@rowanimation]><app-projekt-teendo-list></app-projekt-teendo-list></div>
   </ng-container>
-  <ng-container *ngIf="projektservice.EgyMode === 12">
+
+  <ng-container *ngIf="egymode === 27">
     <div [@rowanimation]>
       <app-projekt-datumok [eppFrissit]="eppFrissit"
                            (OkClick)="SegedOk()"
