--- a/src/app/projekt/projekt-export/projekt-export.component.html
+++ b/src/app/projekt/projekt-export/projekt-export.component.html
@@ -1,18 +1,19 @@
 <div class="alapkeret">
   <h5>{{projektservice.cim}} export</h5>
-  <h6>{{projektservice.statuszexporthoz}}</h6>
 
-  <form #f="ngForm" (ngSubmit)="submit()">
+  <form #f="ngForm" (ngSubmit)="onSubmit()">
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
+      <div class="egylabel">{{projektcsoport}}</div>
+    </div>
+
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary"
               [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
-      <button class="btn btn-sm btn-secondary" style="margin-left:3px;"
-              [disabled]="!eppFrissit" type="button" (click)="megsem()">Stop</button>
-      <button class="btn btn-sm btn-secondary" style="margin-left:3px;"
-              [disabled]="eppFrissit" type="button" (click)="vissza()">Vissza</button>
+      <button class="btn btn-sm btn-default" style="margin-left:3px;"
+              [disabled]="eppFrissit" type="button" (click)="onCancel()">Mégsem</button>
     </div>
+
   </form>
 </div>
 
