hibajavítások + ajánlat form újra

--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -2,73 +2,58 @@
   <h5>Új ajánlat</h5>
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Érvényes</div>
-      </div>
-      <div class="col-md-2">
-        <input type="date" class="form-control form-control-sm" id="ervenyes"
+      <div>
+        <div class="egylabel">Érvényes</div>
+        <input type="date" class="form-control form-control-sm oszlop3" id="ervenyes"
                [(ngModel)]="ajanlatservice.AjanlatErvenyes" name="ervenyes">
       </div>
     </div>
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Szükséges áramerősség</div>
-      </div>
-      <div class="col-md-2">
-        <input type="text" class="form-control form-control-sm" id="szuksaram"
+      <div>
+        <div class="egylabel">Szükséges áramerősség</div>
+        <input type="text" class="form-control form-control-sm oszlop2" id="szuksaram"
                maxlength="20" required autocomplete="off"
                [(ngModel)]="ajanlatservice.AjanlatParam.SzuksegesAramerosseg" name="szuksaram">
       </div>
     </div>
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Tájolás</div>
-      </div>
-      <div class="col-md-2">
-        <input type="text" class="form-control form-control-sm" id="tajolas"
+      <div>
+        <div class="egylabel">Tájolás</div>
+        <input type="text" class="form-control form-control-sm oszlop2" id="tajolas"
                maxlength="20" required autocomplete="off"
                [(ngModel)]="ajanlatservice.AjanlatParam.Tajolas" name="tajolas">
       </div>
     </div>
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Termelés</div>
-      </div>
-      <div class="col-md-2">
-        <input type="number" class="form-control form-control-sm" id="termeles"
+      <div>
+        <div class="egylabel">Termelés</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="termeles"
                required
                [(ngModel)]="ajanlatservice.AjanlatParam.Termeles" name="termeles">
       </div>
     </div>
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Megjegyzés (tárgy)</div>
-      </div>
-      <div class="col-md-6">
-        <input type="text" class="form-control form-control-sm" id="megjegyzes"
+      <div>
+        <div class="egylabel">Megjegyzés (tárgy)</div>
+        <input type="text" class="form-control form-control-sm oszlop6" id="megjegyzes"
                maxlength="200" autocomplete="off"
                [(ngModel)]="ajanlatservice.AjanlatParam.Megjegyzes" name="megjegyzes">
       </div>
     </div>
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title"></div>
-      </div>
-      <div class="col-md-2">
-        <input type="text" class="form-control form-control-sm" id="netto" style="text-align:right"
+      <div>
+        <input type="text" class="form-control form-control-sm oszlop3" id="netto" style="text-align:right;display: inline-block"
                readonly="true" [(ngModel)]="ajanlatservice.AjanlatParam.Netto">
-      </div>
-      <div class="col-md-2">
-        <input type="text" class="form-control form-control-sm" id="afa" style="text-align:right"
+
+        <input type="text" class="form-control form-control-sm oszlop3" id="afa" style="text-align:right;display: inline-block"
                readonly="true" [(ngModel)]="ajanlatservice.AjanlatParam.Afa">
-      </div>
-      <div class="col-md-2">
-        <input type="text" class="form-control form-control-sm" id="brutto" style="text-align:right"
+
+        <input type="text" class="form-control form-control-sm oszlop3" id="brutto" style="text-align:right;display: inline-block"
                readonly="true" [(ngModel)]="ajanlatservice.AjanlatParam.Brutto">
       </div>
     </div>
@@ -115,7 +100,7 @@
       <app-ajanlat-tetel></app-ajanlat-tetel>
     </ng-container>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="eppFrissit || ajanlatservice.AjanlatContainerMode === 2"
               type="button" (click)="onSubmit()">Ok</button>
       <button class="btn btn-sm btn-default" [disabled]="eppFrissit || ajanlatservice.AjanlatContainerMode === 2"
