--- a/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
+++ b/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
@@ -99,7 +99,7 @@
   </ng-container>
   <ng-container *ngIf="bizonylatservice.EgyMode === 4">
     <div [@rowanimation]>
-      <app-bizonylat-irat-list></app-bizonylat-irat-list>
+      <app-bizonylat-irat-container></app-bizonylat-irat-container>
     </div>
   </ng-container>
   <ng-container *ngIf="bizonylatservice.EgyMode === 5">
