--- a/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
+++ b/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
@@ -4,58 +4,48 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">{{ajanlatservice.AjanlatParam.AjanlatBuf[ajanlatservice.AjanlattetelIndex].TetelTipus}}</div>
-      </div>
-      <div class="col-md-3">
-        <input type="text" class="form-control form-control-sm" id="cikk"
-               maxlength="100" autocomplete="off" style="background-color: aquamarine"
+      <div>
+        <div class="egylabel">{{ajanlatservice.AjanlatParam.AjanlatBuf[ajanlatservice.AjanlattetelIndex].TetelTipus}}</div>
+        <input type="text" class="form-control form-control-sm oszlop6" id="cikk"
+               maxlength="100" autocomplete="off" style="background-color: aquamarine;display: inline-block"
                [(ngModel)]="ajanlatservice.AjanlatParam.AjanlatBuf[ajanlatservice.AjanlattetelIndex].CikkNev" name="cikk">
-      </div>
-      <div class="col-md-1">
-        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px" type="button" (click)="CikkZoom()">...</button>
+        <button class="btn btn-sm btn-outline-primary" style="margin-left: 4px;display: inline-block" type="button" (click)="CikkZoom()">...</button>
       </div>
     </div>
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Mennyiség</div>
-      </div>
-      <div class="col-md-2">
-        <input type="number" class="form-control form-control-sm" id="mennyiseg"
+      <div>
+        <div class="egylabel">Mennyiség</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="mennyiseg"
                [(ngModel)]="ajanlatservice.AjanlatParam.AjanlatBuf[ajanlatservice.AjanlattetelIndex].Mennyiseg" name="mennyiseg">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Egységár</div>
-      </div>
-      <div class="col-md-2">
-        <input type="number" class="form-control form-control-sm" id="egysegar"
+      <div>
+        <div class="egylabel">Egységár</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="egysegar"
                [(ngModel)]="ajanlatservice.AjanlatParam.AjanlatBuf[ajanlatservice.AjanlattetelIndex].EgysegAr" name="egysegar">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Egységnyi teljesítmény</div>
-      </div>
-      <div class="col-md-2">
-        <input type="number" class="form-control form-control-sm" id="egysegnyi"
+      <div>
+        <div class="egylabel">Egységnyi teljesítmény</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="egysegnyi"
                [(ngModel)]="ajanlatservice.AjanlatParam.AjanlatBuf[ajanlatservice.AjanlattetelIndex].EgysegnyiTeljesitmeny" name="egysegnyi">
       </div>
     </div>
+
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Garancia</div>
-      </div>
-      <div class="col-md-2">
-        <input type="number" class="form-control form-control-sm" id="garancia"
+      <div>
+        <div class="egylabel">Garancia</div>
+        <input type="number" class="form-control form-control-sm oszlop2" id="garancia"
                [(ngModel)]="ajanlatservice.AjanlatParam.AjanlatBuf[ajanlatservice.AjanlattetelIndex].Garancia" name="garancia">
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
