--- a/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
@@ -9,7 +9,7 @@
         <div class="egylabel">ÁFA kulcs</div>
         <input type="text" class="form-control form-control-sm oszlop2" id="afakulcs"
                maxlength="10" required autocomplete="off"
-               [(ngModel)]="afakulcsservice.DtoEdited.Afakulcs1" name="afakulcs">
+               [(ngModel)]="DtoEdited.Afakulcs1" name="afakulcs">
       </div>
     </div>
     <div class="row no-gutters editform-row">
@@ -17,7 +17,7 @@
         <div class="egylabel">Az ÁFA mértéke, %</div>
         <input type="number" class="form-control form-control-sm oszlop1" id="egysegar"
                required autocomplete="off"
-               [(ngModel)]="afakulcsservice.DtoEdited.Afamerteke" name="egysegar">
+               [(ngModel)]="DtoEdited.Afamerteke" name="egysegar">
       </div>
     </div>
 
