--- a/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
@@ -9,14 +9,14 @@
         <div class="egylabel">Azonosító</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="azonosito"
                maxlength="30" required autocomplete="off"
-               [(ngModel)]="felhasznaloservice.DtoEdited.Azonosito" name="azonosito">
+               [(ngModel)]="DtoEdited.Azonosito" name="azonosito">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Név</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="nev"
                maxlength="100" required autocomplete="off"
-               [(ngModel)]="felhasznaloservice.DtoEdited.Nev" name="nev">
+               [(ngModel)]="DtoEdited.Nev" name="nev">
       </div>
     </div>
 
@@ -25,14 +25,14 @@
         <div class="egylabel">Telefon</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="telefon"
                maxlength="50" required autocomplete="off"
-               [(ngModel)]="felhasznaloservice.DtoEdited.Telefon" name="telefon">
+               [(ngModel)]="DtoEdited.Telefon" name="telefon">
       </div>
 
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Email</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="email"
                maxlength="50" required autocomplete="off"
-               [(ngModel)]="felhasznaloservice.DtoEdited.Email" name="email">
+               [(ngModel)]="DtoEdited.Email" name="email">
       </div>
     </div>
 
@@ -40,7 +40,7 @@
       <div style="margin-right: 5px">
         <div class="egylabel">Státusz</div>
         <select type="text" class="form-control form-control-sm"
-                [(ngModel)]="felhasznaloservice.DtoEdited.Statusz" name="statusz">
+                [(ngModel)]="DtoEdited.Statusz" name="statusz">
           <option>OK</option>
           <option>Tiltott</option>
         </select>
@@ -49,7 +49,7 @@
       <div style="display: inline-block; margin-right: 5px">
         <div class="egylabel">Log</div>
         <select type="text" class="form-control form-control-sm"
-                [(ngModel)]="felhasznaloservice.DtoEdited.Logonlog" name="log">
+                [(ngModel)]="DtoEdited.Logonlog" name="log">
           <option value="false">Nem</option>
           <option value="true">Igen</option>
         </select>
