--- a/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -90,7 +90,9 @@
     <app-me-list></app-me-list>
   </ng-container>
   <ng-container *ngIf="cikkservice.SzerkesztesMode === 2">
-    <app-afakulcs-list></app-afakulcs-list>
+    <app-afakulcs-list [maszk]="this.cikkservice.DtoEdited.Afakulcs || ''"
+                       (eventSelectzoom)="onAfakulcsSelectzoom($event)"
+                       (eventStopzoom)="onAfakulcsStopzoom()"></app-afakulcs-list>
   </ng-container>
   <ng-container *ngIf="cikkservice.SzerkesztesMode === 3">
     <app-termekdij-list></app-termekdij-list>
